--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Poppins:wght@400;500;600;700;800&display=swap');
 
 .font-poppins {
     font-family: 'poppins', sans-serif;
+}
+.font-anton {
+    font-family: "Anton", sans-serif;
+  }
+  
+
+body{
+    background: linear-gradient(180.00deg, rgb(1, 3, 19) -26.288%,rgba(1, 3, 19, 0) 100%);
 }
